--- a/package.json
+++ b/package.json
@@ -22,12 +22,9 @@
   },
   "homepage": "https://github.com/webgjw/fast-cache#readme",
   "devDependencies": {
+    "@babel/core": "^7.25.7",
     "@babel/preset-env": "^7.25.7",
-    "babel-core": "^6.26.3",
     "babel-loader": "^9.2.1",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-latest": "^6.24.1",
     "webpack": "^5.95.0",
     "webpack-cli": "^5.1.4"
   }
