--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fast-cache",
+  "name": "fast-cache-gjw",
   "version": "0.0.1",
   "description": "短小精悍的前端缓存工具，防止内存\"侧漏\"",
   "main": "src/index.js",
