--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fast-cache-gjw",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "短小精悍的前端缓存工具，防止内存\"侧漏\"",
   "main": "src/index.js",
   "scripts": {
@@ -27,5 +27,8 @@
     "babel-loader": "^9.2.1",
     "webpack": "^5.95.0",
     "webpack-cli": "^5.1.4"
+  },
+  "dependencies": {
+    "user": "^0.0.0"
   }
 }
